<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stay Milano</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_first_access">FirstAccessActivity</string>
    <string name="new_button_label">Create New</string>
    <string name="title_activity_area_selection">AreaSelection</string>
    <string name="title_activity_show_itineraries">ShowItinerariesActivity</string>
    <string name="show_button_label">Show My Itineraries</string>
    <string name="duomo">Duomo</string>
    <string name="castello">Castello</string>
    <string name="porta_ticinese">Porta Ticinese</string>
    <string name="porta_romana">Porta Romana</string>
    <string name="palestro">Palestro</string>
    <string name="expo2015">EXPO2015</string>
    <string name="title_activity_poilist">POIListActivity</string>
    <string name="welcome_msg">Welcome in Milan!</string>
    <string name="init_msg"> Create a new itinerary and enjoy your visit!</string>
    <string name="download_button">Download</string>
    <string name="create_button">Create</string>
    <string name="actionok">OK</string>
    <string name="error">cannot save an empty itinerary</string>
    <string name="noPoiMessage">Please insert the monuments you want to visit by selecting the markers on the map</string>
    <string name="save">Save</string>
    <string name="modify">Modify</string>
    <string name="takeCurrent">Take current position</string>
    <string name="startPointHint">Preferred start address</string>
    <string name="setSP">Set</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="newItineraryButton">Create New Itinerary</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Please enable WiFI Direct from the action bar button above or from system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="title_activity_starting_point">StartingPointActivity</string>
    <string name="title_activity_wi_fi">WiFiActivity</string>
    <string name="title_activity_poilist_fragment">POIListFragment</string>
    <string name="create_msg">Hello! Create a new Itinerary</string>
    <string name="title_activity_da_eliminare">DaEliminare</string>

</resources>
